--- a/src/main/resources/templates/add-user.html
+++ b/src/main/resources/templates/add-user.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<head>
+<head xmlns:layout="http://www.w3.org/1999/xhtml">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -21,19 +21,40 @@
     </div>
     <div class="container mt-3">
         <div class="card" style="width: 40rem;">
-            <samp class="text-center m-lg-2">Login</samp>
+            <samp class="text-center m-lg-2">Create Users.</samp>
             <div class="card-body">
-                <form method="POST" th:action="@{/login-registration/login}" class="mx-auto w-50" th:object="${login}">
-                <!-- Email input -->
+                <form method="POST" th:action="@{/create-user/add}" class="mx-auto w-50" th:object="${createUser}">
+
+                    <!-- Email input -->
                     <div class="form-outline mb-4">
-                        <label class="form-label" for="form2Example1">Email address</label>
+                        <label class="form-label" for="form2Example1">User Name:</label>
+                        <input type="text" class="form-control" placeholder="Enter the Username..." th:field="*{username}" th:classappend="${#fields.hasErrors('username')}? 'is-invalid'">
+                    </div>
+
+                    <!-- Email input -->
+                    <div class="form-outline mb-4">
+                        <label class="form-label" for="form2Example1">Email Address:</label>
                         <input type="text" class="form-control" placeholder="Enter the Email..." th:field="*{email}" th:classappend="${#fields.hasErrors('email')}? 'is-invalid'">
                     </div>
 
+                    <!-- Phone input -->
+                    <div class="form-outline mb-4">
+                        <label class="form-label" for="form2Example1">Phone  Number:</label>
+                        <input type="text" class="form-control" placeholder="Enter the Phone Number..." th:field="*{phoneNumber}" th:classappend="${#fields.hasErrors('phoneNumber')}? 'is-invalid'">
+                    </div>
                     <!-- Password input -->
                     <div class="form-outline mb-4">
-                        <label class="form-label" for="form2Example2">Password</label>
+                        <label class="form-label" for="form2Example2">Password:</label>
                         <input type="password" class="form-control" placeholder="Enter the Password..." th:field="*{password}" th:classappend="${#fields.hasErrors('password')}? 'is-invalid'">
+                    </div>
+
+                    <div class="form-outline mb-4">
+                        <label>Role:</label>
+                        <select class="form-control" th:field="*{roles}"
+                                th:classappend="${#fields.hasErrors('roles')}? 'is-invalid'">
+                            <option value="default">Select Role Name..</option>
+                            <option th:each="operator : ${roleRequestDTOList}" th:value="${operator.id}" th:text="${operator.name}"></option>
+                        </select>
                     </div>
 
                     <div class="text-lg-end">
@@ -42,30 +63,11 @@
 
                     </div>
 
-                    <!-- 2 column grid layout for inline styling -->
-                    <div class="row mb-4">
-                        <div class="col d-flex justify-content-center">
-                            <!-- Checkbox -->
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="form2Example31" checked />
-                                <label class="form-check-label" for="form2Example31"> Remember me </label>
-                            </div>
-                        </div>
-
-                        <div class="col">
-                            <!-- Simple link -->
-                            <a href="#!">Forgot password?</a>
-                        </div>
+                    <div class="text-lg-start">
+                        <!-- Submit button -->
+                        <p><a th:href="@{/login-registration}">Back</a></p>
                     </div>
 
-
-                    <!-- Register buttons -->
-                    <div class="text-center">
-
-                        <p>Not a member?   <a th:href="@{/login-registration/regis}">Register</a></p>
-                        <p>or sign up with:</p>
-
-                    </div>
                 </form>
             </div>
         </div>
