--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{/layout/basic}">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.w3.org/1999/xhtml" layout:decorate="~{/layout/basic}">
 <body>
 <div layout:fragment="content">
 
@@ -12,28 +13,38 @@
 
     <div class="row align-items-md-stretch">
 
-        <div class="col-md-4">
+        <div class="col-md-3">
             <div class="h-10 p-5 bg-light rounded-3">
-                <a th:href="@{/organization-view}" class="nav-link text-dark  text-center" >
+                <a th:href="@{/organization}" class="nav-link text-dark  text-center">
                     <i class="fa fa-sitemap d-block fa-lg mx-auto mb-2" aria-hidden="true"></i>
                     Organization View
                 </a>
             </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
             <div class="h-10 p-5 bg-light rounded-3">
-                <a th:href="@{/emergency-contract-view}" class="nav-link text-dark  text-center" >
+                <a th:href="@{/emergency-contract}" class="nav-link text-dark  text-center">
                     <i class="fa fa-bullhorn d-block fa-lg mx-auto mb-2" aria-hidden="true"></i>
                     Emergency Contact
                 </a>
             </div>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-3">
             <div class="h-10 p-5 bg-light rounded-3">
-                <a th:href="@{/role-view}" class="nav-link text-dark  text-center" >
+                <a th:href="@{/role}" class="nav-link text-dark  text-center">
                     <i class="fa fa-bullhorn d-block fa-lg mx-auto mb-2" aria-hidden="true"></i>
-                   Role Create
+                    Role Create
+                </a>
+            </div>
+        </div>
+        <br>
+        <br>
+        <div class="col-md-3">
+            <div class="h-10 p-5 bg-light rounded-3" sec:authorize="hasAnyAuthority('ADMIN')">
+                <a th:href="@{/create-user}" class="nav-link text-dark  text-center">
+                    <i class="fa fa-bullhorn d-block fa-lg mx-auto mb-2" aria-hidden="true"></i>
+                    User Create
                 </a>
             </div>
         </div>
