--- a/src/main/resources/templates/layout/basic.html
+++ b/src/main/resources/templates/layout/basic.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html class="h-100" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html class="h-100" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.w3.org/1999/xhtml">
     <head>
         <title>MoPA</title>
         <meta charset="utf-8">
@@ -21,6 +22,10 @@
                             <h2>Ministry Of Public Administration</h2>
                         </a>
 
+                        <div class="text-center" sec:authorize="isAuthenticated()">
+                            Welcome <b><span sec:authentication="name">Username</span></b>
+                        </div>
+
                         <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                             <li>
                                 <a th:href="@{/}" class="nav-link text-white text-center">
@@ -28,14 +33,13 @@
                                     Home
                                 </a>
                             </li>
-
+                        </ul>
+                        <ul>
                             <li>
-                                <a th:href="@{/contract-view}" class="nav-link text-white text-center">
-                                    <i class="fas fa-users d-block fa-lg mx-auto mb-2"></i>
-                                    Users
-                                </a>
+                                <form th:action="@{/logout}" method="post">
+                                    <input type="submit" value="Logout" />
+                                </form>
                             </li>
-
                         </ul>
                     </div>
                 </div>
