--- a/src/main/resources/templates/view-contract.html
+++ b/src/main/resources/templates/view-contract.html
@@ -19,41 +19,49 @@
 </head>
 <body>
 <div layout:fragment="content">
-    <h1 class="text-center mb-4">Role List</h1>
+    <h1 class="text-center mb-4">Contact List</h1>
 
     <th:block th:include="fragment/success-message.html"></th:block>
 
 
-    <a th:href="@{/role-view/add}" class="btn btn-outline-success mb-3">
-        <i class="fas fa-fw fa-user-plus"></i> Create New Role
+    <a th:href="@{/contract/add}" class="btn btn-outline-success mb-3">
+        <i class="fas fa-fw fa-user-plus"></i> Create New Contract
     </a>
     <div class="table-responsive">
         <table id="example" class="table table-sm table-bordered">
             <thead>
             <tr class="text-center">
-                <th>Role Name</th>
-                <th>Role Code</th>
-                <th>User Email</th>
+                <th>Name</th>
+                <th>Govt.Id</th>
+                <th>Designation</th>
+                <th>Organization</th>
+                <th>Contact No</th>
+                <th>Email</th>
+                <th>Ordering</th>
                 <th>Created at</th>
                 <th>Update at</th>
                 <th>Actions</th>
             </tr>
             </thead>
             <tbody>
-            <tr th:if="${#lists.isEmpty(responseDTOS)}">
+            <tr th:if="${#lists.isEmpty(addContract)}">
                 <td class="text-center fw-bold" colspan="10">No records found</td>
             </tr>
-            <tr class="text-center" th:each="responeDto: ${responseDTOS}">
-                <td th:text="${responeDto.roleName}">govId</td>
-                <td th:text="${responeDto.roleCode}">name</td>
-                <td th:text="${responeDto.loginRegistrationEntity.email}">organization</td>
+            <tr class="text-center" th:each="responeDto: ${addContract}">
+                <td th:text="${responeDto.name}">govId</td>
+                <td th:text="${responeDto.govId}">name</td>
+                <td th:text="${responeDto.designation}">designation</td>
+                <td th:text="${responeDto.organization.orgName}">organization</td>
+                <td th:text="${responeDto.mobileNumber}">mobileNumber</td>
+                <td th:text="${responeDto.email}">email</td>
+                <td th:text="${responeDto.orderSl}">orderSl</td>
                 <td th:text="${#temporals.format(responeDto.createdAt, 'dd/MM/yyyy HH:mm:ss')}">CreatedAt</td>
                 <td th:text="${#temporals.format(responeDto.updatedAt, 'dd/MM/yyyy HH:mm:ss')}">UpdateAt</td>
                 <td>
                     <div class="btn-group">
 
                         <button type="button" class="btn btn-sm btn-outline-primary">
-                            <a th:href="@{/contract-view/{id}(id=${responeDto.id})}"
+                            <a th:href="@{/contract/{id}(id=${responeDto.id})}"
                                class="btn btn-sm btn-outline-primary">
                                 <i class="fas fa-fw fa-pencil-alt"></i>
                             </a>
@@ -62,7 +70,7 @@
 
                         <button type="button" class="btn btn-sm btn-outline-danger" data-bs-toggle="modal"
                                 data-bs-target="#deleteConfirmModal">
-                            <a th:href="@{/role-view/delete/{id}(id=${responeDto.id})}"
+                            <a th:href="@{/contract/delete/{id}(id=${responeDto.id})}"
                                class="btn btn-sm btn-outline-danger">
                                 <i class="fas fa-fw fa-trash-alt"></i>
                             </a>
@@ -92,7 +100,7 @@
         $(document).ready(function () {
             //Only needed for the filename of export files.
             //Normally set in the title tag of your page.
-            document.title = "Contact List";
+            document.title = "Contact";
             // Create search inputs in footer
             $("#example tfoot th").each(function () {
                 var title = $(this).text();
