--- a/src/main/resources/templates/view-organization.html
+++ b/src/main/resources/templates/view-organization.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Emergency Contract List</title>
+    <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script
@@ -19,47 +19,57 @@
 </head>
 <body>
 <div layout:fragment="content">
-    <h1 class="text-center mb-4">Emergency Contact List</h1>
+    <h1 class="text-center mb-4">Organization List</h1>
 
     <th:block th:include="fragment/success-message.html"></th:block>
 
-    <a th:href="@{/emergency-contract-view/add}" class="btn btn-outline-success mb-3">
-        <i class="fas fa-fw fa-user-plus"></i> Create New Emergency Contract
+
+    <a th:href="@{/organization/add}" class="btn btn-outline-success mb-3">
+        <i class="fas fa-fw fa-user-plus"></i> Create New Organization
     </a>
     <div class="table-responsive">
         <table id="example" class="table table-sm table-bordered">
             <thead>
             <tr class="text-center">
-                <th>Institution Type</th>
-                <th>Telephone</th>
+                <th>Org Type</th>
+                <th>Org Name</th>
+                <th>Org Location</th>
+                <th>Address</th>
                 <th>Created at</th>
                 <th>Update at</th>
                 <th>Actions</th>
             </tr>
             </thead>
             <tbody>
-            <tr th:if="${#lists.isEmpty(emergencyContract)}">
+            <tr th:if="${#lists.isEmpty(responseDTOS)}">
                 <td class="text-center fw-bold" colspan="10">No records found</td>
             </tr>
-            <tr class="text-center" th:each="responeDto: ${emergencyContract}">
-                <td th:text="${responeDto.institutionType}">Name</td>
-                <td th:text="${responeDto.telephoneNUmber}">Email</td>
+            <tr class="text-center" th:each="responeDto: ${responseDTOS}">
+                <td th:text="${responeDto.OrgType}">Name</td>
+                <td th:text="${responeDto.orgName}">Email</td>
+                <td th:text="${responeDto.orgLocation}">Age</td>
+                <td th:text="${responeDto.orgAddress}">Street</td>
                 <td th:text="${#temporals.format(responeDto.createdAt, 'dd/MM/yyyy HH:mm:ss')}">CreatedAt</td>
                 <td th:text="${#temporals.format(responeDto.updatedAt, 'dd/MM/yyyy HH:mm:ss')}">UpdateAt</td>
                 <td>
                     <div class="btn-group">
 
                         <button type="button" class="btn btn-sm btn-outline-primary">
-                            <a th:href="@{/emergency-contract-view/{id}(id=${responeDto.id})}"
+                            <a th:href="@{/organization/{id}(id=${responeDto.id})}"
                                class="btn btn-sm btn-outline-primary">
                                 <i class="fas fa-fw fa-pencil-alt"></i>
                             </a>
                         </button>
 
+                        <!-- <button type="button" class="btn btn-sm btn-outline-danger">
+                             <a th:href="@{/organization/delete/{id}(id=${responeDto.id})}" class="btn btn-sm btn-outline-primary">
+                                 <i class="fas fa-fw fa-trash-alt"></i>
+                             </a>
+                         </button>-->
 
                         <button type="button" class="btn btn-sm btn-outline-danger" data-bs-toggle="modal"
                                 data-bs-target="#deleteConfirmModal">
-                            <a th:href="@{/emergency-contract-view/delete/{id}(id=${responeDto.id})}"
+                            <a th:href="@{/organization/delete/{id}(id=${responeDto.id})}"
                                class="btn btn-sm btn-outline-danger">
                                 <i class="fas fa-fw fa-trash-alt"></i>
                             </a>
@@ -89,7 +99,7 @@
         $(document).ready(function () {
             //Only needed for the filename of export files.
             //Normally set in the title tag of your page.
-            document.title = "Contact List";
+            document.title = "Organization";
             // Create search inputs in footer
             $("#example tfoot th").each(function () {
                 var title = $(this).text();
@@ -105,7 +115,7 @@
                         text: 'Print <i class="fa fa-lg fa-print"></i>',
                         extend: 'print',
                         exportOptions: {
-                            columns: [0, 1, 2, 3]
+                            columns: [0, 1, 2, 3, 4, 5]
                         },
                         className: 'table-btns print-btn'
                     },
@@ -113,7 +123,7 @@
                         text: 'Export to Excel <i class="fa fa-lg fa-file-excel-o"></i>',
                         extend: 'excel',
                         exportOptions: {
-                            columns: [0, 1, 2, 3]
+                            columns: [0, 1, 2, 3, 4, 5]
                         },
                         className: 'table-btns excel-btn'
                     },
