--- a/src/main/resources/templates/add-Role.html
+++ b/src/main/resources/templates/add-Role.html
@@ -24,7 +24,7 @@
     <div class="container mt-3">
         <div class="card">
             <div class="card-body">
-                <form method="POST" th:action="@{/role-view/add}" class="mx-auto w-50" th:object="${addRole}">
+                <form method="POST" th:action="@{/role/add}" class="mx-auto w-50" th:object="${addRole}">
                     <th:block th:include="fragment/error-message.html"></th:block>
                     <fieldset>
 
@@ -41,7 +41,7 @@
 
                     <div class="row">
                         <div class="col-sm-6">
-                            <a th:href="@{/role-view}" class="btn btn-outline-secondary w-100">
+                            <a th:href="@{/role}" class="btn btn-outline-secondary w-100">
                                 Back
                             </a>
                         </div>
