--- a/src/main/resources/templates/edit-role.html
+++ b/src/main/resources/templates/edit-role.html
@@ -46,7 +46,7 @@
 
                     <div class="row">
                         <div class="col-sm-6">
-                            <a th:href="@{/contract-view}" class="btn btn-outline-secondary w-100">
+                            <a th:href="@{/role}" class="btn btn-outline-secondary w-100">
                                 Back
                             </a>
                         </div>
