--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,7 +31,7 @@
         </div>
 
         <div class="col-md-3">
-            <div class="h-10 p-5 bg-light rounded-3">
+            <div class="h-10 p-5 bg-light rounded-3" sec:authorize="hasAnyAuthority('ADMIN')">
                 <a th:href="@{/role}" class="nav-link text-dark  text-center">
                     <i class="fa fa-bullhorn d-block fa-lg mx-auto mb-2" aria-hidden="true"></i>
                     Role Create
@@ -41,7 +41,7 @@
         <br>
         <br>
         <div class="col-md-3">
-            <div class="h-10 p-5 bg-light rounded-3" sec:authorize="hasAnyAuthority('ADMIN')">
+            <div class="h-10 p-5 bg-light rounded-3" sec:authorize="hasAnyAuthority('ADMIN','EDITOR','VIEW')">
                 <a th:href="@{/create-user}" class="nav-link text-dark  text-center">
                     <i class="fa fa-bullhorn d-block fa-lg mx-auto mb-2" aria-hidden="true"></i>
                     User Create
