--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,40 +12,57 @@
     </div>
 
     <div class="row align-items-md-stretch">
+        <div class="container-fluid py-3">
+            <div class="row align-items-md-stretch">
+                <div class="col-md-4">
+                    <div class="h-10 p-5 bg-light rounded-3">
+                        <a th:href="@{/personal-info}" class="nav-link text-dark  text-center">
+                            <i class="fa fa-sitemap d-block fa-lg mx-auto mb-2" aria-hidden="true"></i>
+                            Create Personal Information
+                        </a>
+                    </div>
+                </div>
 
-        <div class="col-md-3">
-            <div class="h-10 p-5 bg-light rounded-3">
-                <a th:href="@{/organization}" class="nav-link text-dark  text-center">
-                    <i class="fa fa-sitemap d-block fa-lg mx-auto mb-2" aria-hidden="true"></i>
-                    Organization View
-                </a>
-            </div>
-        </div>
-        <div class="col-md-3">
-            <div class="h-10 p-5 bg-light rounded-3">
-                <a th:href="@{/emergency-contract}" class="nav-link text-dark  text-center">
-                    <i class="fa fa-bullhorn d-block fa-lg mx-auto mb-2" aria-hidden="true"></i>
-                    Emergency Contact
-                </a>
-            </div>
-        </div>
+                <div class="col-md-4">
+                    <div class="h-10 p-5 bg-light rounded-3">
+                        <a th:href="@{/organization}" class="nav-link text-dark  text-center">
+                            <i class="fa fa-sitemap d-block fa-lg mx-auto mb-2" aria-hidden="true"></i>
+                            Organization View
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="h-10 p-5 bg-light rounded-3">
+                        <a th:href="@{/emergency-contract}" class="nav-link text-dark  text-center">
+                            <i class="fa fa-bullhorn d-block fa-lg mx-auto mb-2" aria-hidden="true"></i>
+                            Emergency Contact
+                        </a>
+                    </div>
+                </div>
 
-        <div class="col-md-3">
-            <div class="h-10 p-5 bg-light rounded-3" sec:authorize="hasAnyAuthority('ADMIN')">
-                <a th:href="@{/role}" class="nav-link text-dark  text-center">
-                    <i class="fa fa-bullhorn d-block fa-lg mx-auto mb-2" aria-hidden="true"></i>
-                    Role Create
-                </a>
             </div>
         </div>
-        <br>
-        <br>
-        <div class="col-md-3">
-            <div class="h-10 p-5 bg-light rounded-3" sec:authorize="hasAnyAuthority('ADMIN','EDITOR','VIEW')">
-                <a th:href="@{/create-user}" class="nav-link text-dark  text-center">
-                    <i class="fa fa-bullhorn d-block fa-lg mx-auto mb-2" aria-hidden="true"></i>
-                    User Create
-                </a>
+    </div>
+
+    <div class="row align-items-md-stretch">
+        <div class="container-fluid py-3">
+            <div class="row align-items-md-stretch">
+                <div class="col-md-4">
+                    <div class="h-10 p-5 bg-light rounded-3" sec:authorize="hasAnyAuthority('ADMIN')">
+                        <a th:href="@{/role}" class="nav-link text-dark  text-center">
+                            <i class="fa fa-bullhorn d-block fa-lg mx-auto mb-2" aria-hidden="true"></i>
+                            Role Create
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="h-10 p-5 bg-light rounded-3" sec:authorize="hasAnyAuthority('ADMIN','EDITOR','VIEW')">
+                        <a th:href="@{/create-user}" class="nav-link text-dark  text-center">
+                            <i class="fa fa-bullhorn d-block fa-lg mx-auto mb-2" aria-hidden="true"></i>
+                            User Create
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
