--- a/src/main/resources/templates/view-prl-info.html
+++ b/src/main/resources/templates/view-prl-info.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Add New User</title>
+    <title>Add New Personal Information</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script
@@ -19,60 +19,39 @@
 </head>
 <body>
 <div layout:fragment="content">
-    <h1 class="text-center mb-4">Register User List</h1>
+    <h1 class="text-center mb-4">PRL List</h1>
 
     <th:block th:include="fragment/success-message.html"></th:block>
 
-
-    <a th:href="@{/create-user/sign-up}" class="btn btn-outline-success mb-3" sec:authorize="hasAnyAuthority('ADMIN')">
-        <i class="fas fa-fw fa-user-plus"></i> Create New Users
-    </a>
     <div class="table-responsive">
         <table id="example" class="table table-sm table-bordered">
             <thead>
             <tr class="text-center">
-                <th>User Name</th>
-                <th>User Email</th>
-                <th>User Phone</th>
-                <th>User Role</th>
+                <th>Govt.Id</th>
+                <th>Employee Full Name<br>Email<br>Designation</th>
+                <th>Date Of Birth</th>
+                <th>Date Of Join</th>
+                <th>Mobile No</th>
+                <th>PRL Applicable</th>
+                <th>PRL Date</th>
+                <th>Creator</th>
                 <th>Created at</th>
-                <th>Update at</th>
-                <th>Actions</th>
             </tr>
             </thead>
             <tbody>
-            <tr th:if="${#lists.isEmpty(responseDTOS)}">
+            <tr th:if="${#lists.isEmpty(addPersonalInfo)}">
                 <td class="text-center fw-bold" colspan="10">No records found</td>
             </tr>
-            <tr class="text-center" th:each="responeDto: ${responseDTOS}">
-                <td th:text="${responeDto.username}">User Name</td>
-                <td th:text="${responeDto.email}">User Email</td>
-                <td th:text="${responeDto.phoneNumber}">User Phone</td>
-                <!--<td th:text="${responeDto.roles}">User Role</td>-->
-                <td th:each="object: ${responeDto.roles}"><span th:text="${object.name}" /></td>
+            <tr class="text-center" th:each="responeDto: ${addPersonalInfo}">
+                <td th:text="${responeDto.govId}">${responeDto.govId}</td>
+                <td th:utext="${responeDto.employeeName} + ('<br>'+${(responeDto.email)}) + ('<br>'+${(responeDto.designation)})"></td>
+                <td th:text="${#temporals.format(responeDto.dateOfBirth, 'dd/MM/yyyy')}">dateOfBirth</td>
+                <td th:text="${#temporals.format(responeDto.dateOfJoining, 'dd/MM/yyyy')}">dateOfJoining</td>
+                <td th:text="${responeDto.mobileNumber}">mobileNumber</td>
+                <td th:text="${responeDto.prlApplicable}">prlApplicable</td>
+                <td th:text="${#temporals.format(responeDto.prlDate, 'dd/MM/yyyy')}">prlDate</td>
+                <td th:text="${responeDto.loggedUsers}">loggedUsers</td>
                 <td th:text="${#temporals.format(responeDto.createdAt, 'dd/MM/yyyy HH:mm:ss')}">CreatedAt</td>
-                <td th:text="${#temporals.format(responeDto.updatedAt, 'dd/MM/yyyy HH:mm:ss')}">UpdateAt</td>
-                <td>
-                    <div class="btn-group">
-                        <div sec:authorize="hasAnyAuthority('ADMIN')">
-                            <button type="button" class="btn btn-sm btn-outline-primary">
-                                <a th:href="@{/create-user/{id}(id=${responeDto.id})}"
-                                   class="btn btn-sm btn-outline-primary">
-                                    <i class="fas fa-fw fa-pencil-alt"></i>
-                                </a>
-                            </button>
-                        </div>
-
-                        <div sec:authorize="hasAnyAuthority('ADMIN')">
-                        <button type="button" class="btn btn-sm btn-outline-danger" data-bs-toggle="modal"
-                                data-bs-target="#deleteConfirmModal">
-                            <a th:href="@{/create-user/delete/{id}(id=${responeDto.id})}"
-                               class="btn btn-sm btn-outline-danger">
-                                <i class="fas fa-fw fa-trash-alt"></i>
-                            </a>
-                        </button></div>
-                    </div>
-                </td>
             </tr>
             </tbody>
         </table>
@@ -96,7 +75,7 @@
         $(document).ready(function () {
             //Only needed for the filename of export files.
             //Normally set in the title tag of your page.
-            document.title = "User";
+            document.title = "PRL List.";
             // Create search inputs in footer
             $("#example tfoot th").each(function () {
                 var title = $(this).text();
@@ -112,7 +91,7 @@
                         text: 'Print <i class="fa fa-lg fa-print"></i>',
                         extend: 'print',
                         exportOptions: {
-                            columns: [0, 1, 2, 3, 4, 5]
+                            columns: [0, 1, 2, 3, 4, 5, 6, 7, 8]
                         },
                         className: 'table-btns print-btn'
                     },
@@ -120,7 +99,7 @@
                         text: 'Export to Excel <i class="fa fa-lg fa-file-excel-o"></i>',
                         extend: 'excel',
                         exportOptions: {
-                            columns: [0, 1, 2, 3, 4, 5]
+                            columns: [0, 1, 2, 3, 4, 5, 6, 7, 8]
                         },
                         className: 'table-btns excel-btn'
                     },
